syntax = "proto3";

option go_package = "internal/proto";

package recipes;

service RecipesService {
    rpc GetRecipeWithURL (GetRecipeWithURLRequest) returns (RecipeIDResponse);
    rpc CreateRecipe (CreateRecipeRequest) returns (RecipeIDResponse);
    rpc GetRecipeWithID (GetRecipeWithIDRequest) returns (RecipeResponse);
    rpc SearchRecipes (SearchRecipesRequest) returns (RecipesResponse);
}

message Timer {
    string id = 1;
    string instruction_id = 2;
    int32 value = 3;
    string unit = 4;
    string created = 5;
}

message Instruction {
    string id = 1;
    string recipe_id = 2;
    int32 index = 3;
    string full_text = 4;
    bool has_timer = 5;
    repeated Timer timers = 6;
    string created = 7;
}

message Ingredient {
    string id = 1;
    string recipe_id = 2;
    string full_text = 3;
    bool is_optional = 4;
    string name = 5;
    float quantity = 6;
    string quantity_string = 7;
    string unit = 8;
    string size = 9;
    string ingredient_group = 10;
    string created = 11;
}

message Recipe {
    string id = 1;
    string recipe_url = 2;
    string title = 3;
    string description = 4;
    string cuisine = 5;
    string cooking_method = 6;
    string category = 7;
    string image_url = 8;
    string yields = 9;
    int32 prep_time_minutes = 10;
    int32 cook_time_minutes = 11;
    int32 total_time_minutes = 12;
    repeated Ingredient ingredients = 13;
    repeated Instruction instructions = 14;
    string created = 15;
}

message GetRecipeWithURLRequest {
    string recipe_url = 1;
}

message CreateRecipeRequest {
    Recipe recipe = 1;
}

message GetRecipeWithIDRequest {
    string id = 1;
}

message RecipeIDResponse {
    string id = 1;
}

message RecipeResponse {
    Recipe recipe = 1;
}

message SearchRecipesRequest {
    string query = 1;
    int32 page = 2;
    int32 results_per_page = 3;
}

message RecipesResponse {
    int32 total = 1;
    repeated Recipe recipes = 2;
}
